...
        android:layout_height="50dp"
        android:fontFamily="@font/rubikone"
        android:text="Plan My Day"
        android:textAlignment="center"
        android:textColor="#FFD159"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperAirplane"
        app:layout_constraintVertical_bias="0.5" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:background="#FDF6EC"
        android:fontFamily="@font/ruda"
        android:hint="@string/prompt_password"
        android:paddingStart="16dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"></com.google.android.material.textfield.TextInputEditText>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="58dp"
        android:background="@drawable/round"
        android:backgroundTint="#FFD159"
...
